23 April 2010: Wouter
	- Squelch log message: sendto failed permission denied for
	  255.255.255.255, it is visible in VERB_DETAIL (verbosity 2).
	- Fix to fetch data as last resort more tenaciously.  When cycle
	  targets cause the server selection to believe there are more options
	  when they really are not there, the server selection is reinitiated.
	- Fix fetch from blacklisted dnssec lame servers as last resort.  The
	  server's IP address is then given in validator errors as well.
	- Fix local-zone type redirect that did not use the query name for
	  the answer rrset.

22 April 2010: Wouter
	- tag 1.4.4.
	- trunk contains 1.4.5 in development.
	- Fix validation failure for qtype ANY caused by a RRSIG parse failure.
	  The validator error message was 'no signatures from ...'.

16 April 2010: Wouter
	- more portability defines for CMSG_SPACE, CMSG_ALIGN, CMSG_LEN.
	- tag 1.4.4rc1.

15 April 2010: Wouter
	- ECC-GOST algorithm number 12 that is assigned by IANA.  New test
	  example key and signatures for GOST.  GOST requires openssl-1.0.0.
	  GOST is still disabled by default.

9 April 2010: Wouter
	- Fix bug#305: pkt_dname_tolower could read beyond end of buffer or
	  get into an endless loop, if 0x20 was enabled, and buffers are small
	  or particular broken packets are received.
	- Fix chain of trust with CNAME at an intermediate step, for the DS
	  processing proof.

8 April 2010: Wouter
	- Fix validation of queries with wildcard names (*.example).

6 April 2010: Wouter
	- Fix EDNS probe for .de DNSSEC testbed failure, where the infra
	  cache timeout coincided with a server update, the current EDNS 
	  backoff is less sensitive, and does not cache the backoff unless 
	  the backoff actually works and the domain is not expecting DNSSEC.
	- GOST support with correct algorithm numbers.

1 April 2010: Wouter
	- iana portlist updated.

24 March 2010: Wouter
	- unbound control flushed items are not counted when flushed again.

23 March 2010: Wouter